--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,20 @@
 ---
-
+import Layout from '../layouts/Layout.astro';
+import Hero from '../components/Hero';
+import TechStack from '../components/TechStack';
+import Projects from '../components/Projects';
+import Contact from '../components/Contact';
+import Footer from '../components/Footer';
+import Loader from '../components/Loader';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="WIORMIW | Backend Developer">
+  <main>
+    <Loader client:load />
+    <Hero client:load />
+    <TechStack client:visible />
+    <Projects client:visible />
+    <Contact client:visible />
+    <Footer client:visible />
+  </main>
+</Layout>
