--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero';
+import Experiences from '../components/Experiences';
 import TechStack from '../components/TechStack';
 import Projects from '../components/Projects';
 import Contact from '../components/Contact';
@@ -12,10 +13,9 @@ import Navbar from '../components/Navbar';
 <Layout title="WIORMIW | Backend Developer">
   <main>
     <Loader client:load />
-
     <Navbar client:load />
-
     <Hero client:load />
+    <Experiences client:visible />
     <TechStack client:visible />
     <Projects client:visible />
     <Contact client:visible />
